fix(timeline): converge canonical runtime authority